--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,14 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+#data
+data/
+
+#models
+*.pth
+*.pt
+# Checkpoints
+*.ckpt
+# Logs
+*.log
