--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asttokens==3.0.0
+certifi==2025.8.3
+charset-normalizer==3.4.2
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
@@ -8,15 +10,21 @@ executing==2.2.0
 filelock==3.13.1
 fonttools==4.59.0
 fsspec==2024.6.1
+hf-xet==1.1.7
+huggingface-hub==0.34.3
+idna==3.10
 ipykernel==6.30.1
 ipynb==0.5.1
 ipython==9.4.0
 ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
 jedi==0.19.2
 Jinja2==3.1.4
 joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
+jupyterlab_widgets==3.0.15
+kagglehub==0.3.12
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.5
@@ -41,6 +49,7 @@ nvidia-nvjitlink-cu12==12.8.61
 nvidia-nvtx-cu12==12.8.55
 opencv-python==4.12.0.88
 packaging==25.0
+pandas==2.3.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.3.0
@@ -52,19 +61,31 @@ pure_eval==0.2.3
 Pygments==2.19.2
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
 pyzmq==27.0.1
+regex==2025.7.34
+requests==2.32.4
+safetensors==0.6.1
 scikit-learn==1.7.1
 scipy==1.16.1
+seaborn==0.13.2
 setuptools==70.2.0
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.3
 threadpoolctl==3.6.0
+tokenizers==0.21.4
 torch==2.7.1+cu128
 torchaudio==2.7.1+cu128
 torchvision==0.22.1+cu128
 tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.55.0
 triton==3.3.1
 typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.5.0
 wcwidth==0.2.13
+widgetsnbextension==4.0.14
